# lbd

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml
data/: balai_bahasa_sample.csv
data.ms/: instance-uid
data.ms/auth/: data.mdb  lock.mdb
data.ms/indexes/5c50eaf5-5d13-4a76-87b0-e5332693c8b5/: data.mdb  lock.mdb
data.ms/tasks/: data.mdb  lock.mdb
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  CORPUS_SEEDING_PLAN.md  DEVELOPMENT.md  ETYM_SEEDING_PLAN.md  TODO.md  _config.yml  index.md  installation.md  quickstart.md
docs/_layouts/: default.html
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/src/: app.css  app.html  app.ts
frontend/src/lib/: api.ts  stores.ts  translations.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
migrations/: 001_initial_schema.sql  002_domain_authority.sql
references/: DATA_IMPORT_SUMMARY.md  SUTJAJA_CROSSREF.md
scripts/: index_search.sh  scrape_balai_bahasa.py  scrape_balai_bahasa_notes.md  seed_data.sql  setup.sh  start.sh  status.sh  stop.sh
scripts/import/: README.md
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
src/db/: pool.rs
src/handlers/: corpus.rs  entries.rs  events.rs  exports.rs  mod.rs  search.rs
src/models/: corpus.rs  entry.rs  etymology.rs  event.rs  mod.rs  register.rs
src/search/: client.rs  indexer.rs
tests/: integration_tests.rs
(+5 files in other folders)
