[package]
name = "lbd"
version = "0.1.0"
edition = "2021"
authors = ["Lontar Team"]

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
meilisearch-sdk = "0.27.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "env"] }
csv = "1.3"
jsonwebtoken = "9"
